<?xml version="1.0"?>
<package format="3">
  <name>adas_robot_description</name>
  <version>0.0.1</version>
  <description>ADAS Robot URDF Description</description>
  <maintainer email="avineeshkosuru0@gmail.com">avi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>launch_ros</exec_depend>

</package>
